# pancetta

./: .env.example  .gitignore  .gitmodules  APPROVAL_CHECKLIST.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  FEATURES.md  INSTALL.md  LICENSE  LICENSE-APACHE  PANCETTA_REQUIREMENTS_VALIDATION_REPORT.md  PLAN.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  PROTOTYPE_COMPLETION_PLAN.md  QUICKSTART.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  USER_MANUAL.md  deny.toml  docker-compose.yml  install.sh  test_mode_compile.sh  test_pipeline.sh  test_regex.rs
pancetta/: Cargo.toml
pancetta-agent/: Cargo.toml
pancetta-agent/src/: arm.rs  audit.rs  capability.rs  control.rs  keys.rs  lib.rs  noise.rs  pairing.rs  relay.rs  session.rs
pancetta-agent/tests/: capability_verification.rs  noise_vectors.rs  pairing_sig_vectors.rs  tx_arm_grant_vectors.rs
pancetta-audio/: Cargo.toml
pancetta-audio/examples/: check_input.rs  list_devices.rs
pancetta-audio/src/: converter.rs  device.rs  error.rs  latency.rs  lib.rs  main.rs  manager.rs  message_bus_integration.rs  processor.rs  realtime.rs  ringbuffer_comm.rs  stream.rs
pancetta-config/: Cargo.toml  defaults.toml
pancetta-config/examples/: config.toml
pancetta-config/src/: audio.rs  autonomous.rs  fox.rs  hot_reload.rs  hound.rs  lib.rs  loader.rs  network.rs  rig.rs  station.rs  ui.rs
pancetta-core/: Cargo.toml
pancetta-core/examples/: mode_threading.rs
pancetta-core/src/: error.rs  gridsquare.rs  lib.rs  response_step.rs  slot.rs  tx_freq_mode.rs  tx_policy.rs
pancetta-cqdx/: Cargo.toml
pancetta-cqdx/src/: cache.rs  client.rs  error.rs  lib.rs  types.rs
pancetta-cqdx/tests/: integration.rs
pancetta-dsp/: Cargo.toml
pancetta-dsp/examples/: ft8_pipeline_demo.rs
pancetta-dsp/src/: agc.rs  buffer.rs  filter.rs  lib.rs  pipeline.rs  resampler.rs
pancetta-dx/: Cargo.toml
pancetta-dx/src/: cluster.rs  dxcc.rs  geography.rs  gridsquare.rs  lib.rs  lotw.rs  priorities.rs  propagation.rs  propagation_enhanced.rs  pskreporter.rs  qrz_xml.rs  qso_upload.rs  reports.rs  scorer.rs  statistics.rs  tracker.rs
pancetta-ft8/: ANALYSIS.md  Cargo.toml  LDPC_IMPLEMENTATION.md  README.md  SPECTRAL_ANALYSIS_ENHANCEMENTS.md  TODO.md  TRANSMISSION_FEATURES.md  build.rs
pancetta-ft8/benches/: decoder_benchmark.rs
pancetta-ft8/examples/: enhanced_spectral_analysis.rs  ldpc_performance.rs  snr_calibration.rs  transmission_demo.rs
pancetta-ft8/src/: a7.rs  ap.rs  baseband.rs  benchmark.rs  bp_trajectory_capture.rs  decoder.rs  dt_history.rs  encoder.rs  freq_tracker.rs  ft8_lib_ffi.rs  ldpc.rs  lib.rs  message.rs  modulator.rs  neural_osd.rs  neural_osd_weights.rs  osd.rs  parallel.rs  protocol.rs  signal_processing.rs  soft_combiner.rs  sync.rs  tier_probe.rs  transmit.rs
pancetta-ft8/tests/: benchmark_tests.rs  decoder_refinement_tests.rs  ft8lib_crossval_tests.rs  integration_tests.rs  osd_tests.rs  property_tests.proptest-regressions  property_tests.rs  round_trip_tests.rs  test_signal_generator.rs  test_vectors.rs  transmission_tests.rs  wav_decode_tests.rs  wav_diagnostic.rs  wav_diagnostic2.rs  wsjtx_compat_tests.rs
pancetta-hamlib/: Cargo.toml  build.rs  wrapper.h
pancetta-hamlib/examples/: band_hopper.rs  basic_rig_control.rs  frequency_scanner.rs
pancetta-hamlib/src/: advanced.rs  bindings.rs  error.rs  lib.rs  mock.rs  models.rs  rig.rs  rigctld.rs
pancetta-protocol/: Cargo.toml
pancetta-protocol/src/: command.rs  dto.rs  event.rs  lib.rs  session.rs  wire_serde.rs
pancetta-qso/: Cargo.toml  README.md
pancetta-qso/examples/: basic_qso.rs  contest_logging.rs  decode_rate_sweep.rs  qso_logging.rs  qso_sim.rs  qso_sim_hifi.rs
pancetta-qso/src/: adif.rs  adif_log_writer.rs  async_database.rs  async_logger.rs  auto_sequencer.rs  autonomous.rs  callsign_continuity.rs  content_score.rs  cross_sequence.rs  cross_time_state.rs  database.rs  exchange.rs  fdr.rs  frequency.rs  lib.rs  logger.rs  priority.rs  qso_manager.rs  sim.rs  states.rs  statistics.rs
pancetta-qso/tests/: adversarial_3party.rs  adversarial_completion.rs  adversarial_compound_calls.rs  adversarial_timing.rs  autonomous_scenarios.rs  parity_latch.rs  qso_scenarios.rs  qso_state_machine_props.rs  real_incidents.rs  remote_origin.rs
pancetta-research/: Cargo.toml  README.md
pancetta-research/examples/: ap_recovery_ceiling.rs  baseline_parallel.rs  batch100_em_reestimation.rs  batch101_impulse_robust_llr_kill_switch.rs  batch102_freq_osr_audit.rs  batch28_audio_transforms.rs  batch28_config_diversity.rs  batch28_corpus_analysis.rs  batch28_determinism.rs  batch28_fp_baseline.rs  batch29_fp_characterization.rs  batch29_interferer_pair.rs  batch29_lid_of_band_ship.rs  batch29_regression_check.rs  batch29_subtract_alpha.rs  batch29_suffix_fp_survey.rs  batch30_coherent_vs_noncoherent.rs  batch30_fp_auc.rs  batch30_lid_of_band_vs_jt9.rs  batch30_slash_r_full_audit.rs  batch30_snr_recall_curve.rs  batch31_combined_impact.rs  batch31_content_features.rs  batch31_pattern_audit.rs  batch31_score_fusion.rs  batch32_characterize_survivors.rs  batch32_extended_features.rs  batch32_lr_training.rs  batch32_more_patterns.rs  batch33_rr73_audit.rs  batch33_strong_misses.rs  batch34_combined_buckets.rs  batch34_rr73_internals.rs  batch34_rr73_reproducer.rs  batch34_rr73_wav_dump.rs  batch35_coverage_combined.rs  batch35_probes.rs  batch36_coverage.rs  batch36_multipass_sweep.rs  batch37_frontier_aa.rs  (+95 more)
pancetta-research/src/: bootstrap_ci.rs  callsign_priors.rs  chrono_replay.rs  corpus.rs  curated.rs  decoder.rs  fp_filter.rs  lib.rs  metrics.rs  mode.rs  noise.rs  scorecard.rs  synth.rs  tier_slots.rs  truth.rs
pancetta-research/tests/: ci_guard.rs  compare_smoke.rs  curate_smoke.rs  decoder_smoke.rs  eval_fixtures.rs  leaderboard_smoke.rs  research_env_lifecycle.rs  schema_roundtrip.rs  synth_roundtrip.rs  tier_slot_cross_process.rs  truth_loader.rs
pancetta-tui/: Cargo.toml  FEATURES.md  README.md
pancetta-tui/scripts/: gen_dxcc_table.py
pancetta/src/: lib.rs  (+7 more)
(+731 files in other folders)
