[package]
name = "pancetta-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
snow = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
hex = "0.4"
