[package]
name = "pancetta-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
snow = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = { workspace = true }

[dev-dependencies]
hex = "0.4"
