[package]
name = "pancetta-config"
version = "0.1.0"
edition = "2021"
authors = ["Pancetta Team"]
description = "Configuration management system for Pancetta amateur radio software"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pancetta-team/pancetta"

[dependencies]
# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.50", features = ["full"] }

# File system watching for hot-reload
notify = "6.1"

# Path and environment utilities
dirs = "5.0"
shellexpand = "3.1"

# Validation and utilities
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional features for advanced configuration
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]

[dev-dependencies]
tokio = { version = "1.50", features = ["full"] }
tempfile = "3.27"