[package]
name = "pancetta-core"
description = "Core shared types and utilities for all Pancetta modules"
keywords = ["amateur-radio", "ham-radio", "types", "shared"]
categories = ["multimedia", "science"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
approx = { workspace = true }