[package]
name = "pancetta-cqdx"
version = "0.1.0"
edition = "2021"
description = "cqdx.io API client and cache for Pancetta"
license = "MIT OR Apache-2.0"

[dependencies]
pancetta-core = { path = "../pancetta-core" }
pancetta-qso = { path = "../pancetta-qso" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
