[package]
name = "pancetta-dx"
version = "0.1.0"
edition = "2021"
authors = ["Pancetta Team"]
description = "DX hunting and amateur radio award tracking for Pancetta"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thagale/pancetta"
keywords = ["amateur-radio", "dx", "dxcc", "ham-radio", "contest"]
categories = ["multimedia", "science"]

[dependencies]
# Internal dependencies
pancetta-core = { path = "../pancetta-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
geo = { workspace = true }
geographiclib-rs = { workspace = true }
rusqlite = { workspace = true }
quick-xml = { workspace = true }
csv = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
native-tls = { workspace = true }
tokio-tungstenite = { workspace = true }
statrs = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
approx = { workspace = true }