[package]
name = "pancetta-dx"
description = "DX hunting and amateur radio award tracking for Pancetta"
keywords = ["amateur-radio", "dx", "dxcc", "ham-radio", "contest"]
categories = ["multimedia", "science"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# Internal dependencies
pancetta-core = { path = "../pancetta-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
quick-xml = { workspace = true }
csv = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
approx = { workspace = true }