[package]
name = "pancetta-hamlib"
description = "Hamlib integration and CAT control for amateur radio transceivers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
pancetta-core = { path = "../pancetta-core" }

# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

# Serialization for configuration
serde_json = { workspace = true }
toml = { workspace = true }

# Async utilities
async-trait = "0.1"

# Numeric types for frequency/power handling
num-traits = "0.2"
num-derive = "0.4"

# String interning for efficient model/mode handling
string_cache = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
proptest = "1.10"
tracing-subscriber = { workspace = true }

[features]
default = ["mock-rig"]
# Mock rig implementation for testing without hardware
mock-rig = []

[[example]]
name = "basic_rig_control"
required-features = ["mock-rig"]

[[example]]
name = "frequency_scanner"
required-features = ["mock-rig"]

[[example]]
name = "band_hopper"
required-features = ["mock-rig"]