[package]
name = "pancetta-qso"
description = "QSO management and logging system for FT8 communications"
keywords = ["ham-radio", "ft8", "qso", "adif", "logging"]
categories = ["simulation", "science", "database"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# Internal dependencies
pancetta-core = { path = "../pancetta-core" }

# Core dependencies
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Logging and tracing
tracing = "0.1"

# Utilities
regex = "1.12"
lazy_static = "1.4"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
proptest = "1.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["sqlite"]
sqlite = []
contest-mode = []
dx-cluster = []

[[example]]
name = "basic_qso"
path = "examples/basic_qso.rs"

[[example]]
name = "qso_logging"
path = "examples/qso_logging.rs"